# morning-brief

./: .env.example  .gitignore  README.md  morning_brief.py  pyproject.toml
.github/workflows/: daily-brief.yml
.omc/audit/: .gitignore  PROPOSAL.md  generate_sources.py
.omc/plans/: consensus-seal.md  morning-brief-web-plan-v1.md  morning-brief-web-plan-v2.md  morning-briefing-plan-v1.md  morning-briefing-plan-v2.md  morning-briefing-plan-v3.md  open-questions.md
.omc/specs/: deep-interview-morning-brief-web.md  deep-interview-morning-consumer-trend-briefing.md
config/: brands.txt  categories.yml  companies.yml  editorial.md  macro_prompt.md  sources.yml
docs/qa/: pdf_export.md
morning_brief/: __init__.py  briefing.html.j2  cli.py  collector.py  db.py  macro_tagger.py  models.py  renderer.py  selector.py  summarizer.py
scripts/: __init__.py  migrate_categories.py
tests/: _site_fixtures.py  test_ac_coverage.py  test_article_dedup.py  test_cli_default_renderer.py  test_cli_env_plumbing.py  test_collector.py  test_companies_config.py  test_db_bootstrap.py  test_end_to_end_dry_run.py  test_gitignore.py  test_legacy_removed.py  test_macro_tagger.py  test_migrate_categories.py  test_models_forbid.py  test_partial_banner.py  test_renderer.py  test_selector.py  test_site_archive.py  test_site_atomic_write.py  test_site_country_mapping.py  test_site_generator.py  test_site_macro_integration.py  test_site_responsive.py  test_site_search_index.py  test_site_templates.py  test_sources_config.py  test_summarizer.py  test_workflow_yaml.py
(+30 files in other folders)
